force-app/main/default/objects/Contact/fields/MembershipStartDate_Pediasure__c.field-meta.xml
<CustomField>
    <fullName>MembershipStartDate_Pediasure__c</fullName>
    <label>Membership Start Date Pediasure</label>
    <type>Date</type>
</CustomField>