force-app/main/default/objects/Contact/fields/MembershipStartDate_Similac__c.field-meta.xml
<CustomField>
    <fullName>MembershipStartDate_Similac__c</fullName>
    <label>Membership Start Date Similac</label>
    <type>Date</type>
</CustomField>