force-app/main/default/objects/Contact/fields/MembershipStatus_Ensure__c.field-meta.xml
<CustomField>
    <fullName>MembershipStatus_Ensure__c</fullName>
    <label>Membership Status Ensure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>