force-app/main/default/objects/Contact/fields/MembershipStatus_Similac__c.field-meta.xml
<CustomField>
    <fullName>MembershipStatus_Similac__c</fullName>
    <label>Membership Status Similac</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>