force-app/main/default/objects/Contact/fields/MilkCodeRestriction__c.field-meta.xml
<CustomField>
    <fullName>MilkCodeRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milk Code Restriction</label>
    <type>Checkbox</type>
</CustomField>