force-app/main/default/objects/Contact/fields/Mobile_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Main_Contact__c</fullName>
    <label>Mobile (Main Contact)</label>
    <type>Phone</type>
</CustomField>