force-app/main/default/objects/Contact/fields/Mobile_with_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Mobile_with_CountryCode__c</fullName>
    <formula>IF(Phone &lt;&gt; null, 
CASE(Market__c, 
&quot;PH&quot;, &quot;+63&quot; &amp; RIGHT(Phone, 10), 
&quot;MY&quot;, &quot;6&quot; &amp; Phone,
null),
null
)</formula>
    <label>Mobile (with Country Code)</label>
    <type>Text</type>
</CustomField>