force-app/main/default/objects/Contact/fields/MonthCreated__c.field-meta.xml
<CustomField>
    <fullName>MonthCreated__c</fullName>
    <formula>IF(MONTH(DATEVALUE(CreatedDate)) = 1,
&quot;January&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 2,
&quot;February&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 3,
&quot;March&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 4,
&quot;April&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 5,
&quot;May&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 6,
&quot;June&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 7,
&quot;July&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 8,
&quot;August&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 9,
&quot;September&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 10,
&quot;October&quot;,
IF(MONTH(DATEVALUE(CreatedDate)) = 11,
&quot;November&quot;,
&quot;December&quot;)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Created</label>
    <type>Text</type>
</CustomField>