force-app/main/default/objects/Contact/fields/Monthly_Earned_Points__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Earned_Points__c</fullName>
    <formula>LifetimePoints__c -  Start_Earn_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Earned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>