force-app/main/default/objects/Contact/fields/Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expense__c</fullName>
    <label>Monthly Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;700.000</fullName>
            </value>
            <value>
                <fullName>1.000.000-2.000.000</fullName>
            </value>
            <value>
                <fullName>2.000.000-3.000.000</fullName>
            </value>
            <value>
                <fullName>3.000.000-4.000.000</fullName>
            </value>
            <value>
                <fullName>&gt;4.000.000</fullName>
            </value>
            <value>
                <fullName>Unwilling to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>