force-app/main/default/objects/Contact/fields/Monthly_Expired_Points__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expired_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Expired Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>