force-app/main/default/objects/Contact/fields/Monthly_Redeemed_Points__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Redeemed_Points__c</fullName>
    <formula>TotalPointsRedeemed__c - Start_Redeem_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Redeemed Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>