force-app/main/default/objects/Contact/fields/MultipleBirth__c.field-meta.xml
<CustomField>
    <fullName>MultipleBirth__c</fullName>
    <description>[7-Jul-21 KSK] Each value indicates number of child at birth, allows contact to request for multiple samples when there&apos;s more than one child delivered.</description>
    <inlineHelpText>Each value indicates number of child at birth, allows contact to request for multiple samples when there&apos;s more than one child delivered.</inlineHelpText>
    <label>Multiple Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>