force-app/main/default/objects/Contact/fields/MY_Ensure_Total_Channel_Response__c.field-meta.xml
<CustomField>
    <fullName>MY_Ensure_Total_Channel_Response__c</fullName>
    <description>MY Market Ensure Brand Total Channel Response</description>
    <label>MY Ensure Total Channel Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>