force-app/main/default/objects/Contact/fields/NationalID__c.field-meta.xml
<CustomField>
    <fullName>NationalID__c</fullName>
    <label>National ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>