force-app/main/default/objects/Contact/fields/NightPhone__c.field-meta.xml
<CustomField>
    <fullName>NightPhone__c</fullName>
    <inlineHelpText>This field is for migration purposes.</inlineHelpText>
    <label>Night Phone</label>
    <type>Phone</type>
</CustomField>