force-app/main/default/objects/Contact/fields/Number_of_Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Default_Address__c</fullName>
    <label>Number of Default Address</label>
    <summaryFilterItems>
        <field>Address__c.DefaultAddress__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Address__c.ParentContact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>