force-app/main/default/objects/Contact/fields/NumberofTransaction__c.field-meta.xml
<CustomField>
    <fullName>NumberofTransaction__c</fullName>
    <label>Number of Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>