force-app/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dietician</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Hospital Pharmacist</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient/Consumer</fullName>
            </value>
            <value>
                <fullName>Pharmacy Assistant</fullName>
            </value>
            <value>
                <fullName>Retail Pharmacist</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Housewife</fullName>
            </value>
            <value>
                <fullName>Private Employee</fullName>
            </value>
            <value>
                <fullName>Government Employee</fullName>
            </value>
            <value>
                <fullName>Entrepreneur/Self-employed</fullName>
            </value>
            <value>
                <fullName>Student/College Student</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Unwilling to answer</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
                <isActive>false</isActive>
                <label>Veterinarian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>