force-app/main/default/objects/Contact/fields/Overall_Child_Need__c.field-meta.xml
<CustomField>
    <fullName>Overall_Child_Need__c</fullName>
    <label>Overall Child Need</label>
    <length>255</length>
    <type>Text</type>
</CustomField>