force-app/main/default/objects/Contact/fields/Pardot_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Comments__c</fullName>
    <defaultValue>&quot;I am interested in learning more about your solution, pricing, and how you could help my organization.&quot;</defaultValue>
    <label>Pardot Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>