force-app/main/default/objects/Contact/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fill in the Main Contact for this person (e.g. child or elderly person) under the main contact&apos;s care. This field is not required if this person is a Primary Contact.</inlineHelpText>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Parents</relationshipName>
    <type>Lookup</type>
</CustomField>