force-app/main/default/objects/Contact/fields/Phone_Hashed__c.field-meta.xml
<CustomField>
    <fullName>Phone_Hashed__c</fullName>
    <label>Phone Hashed</label>
    <length>64</length>
    <type>Text</type>
</CustomField>