force-app/main/default/objects/Contact/fields/PreferredContact__c.field-meta.xml
<CustomField>
    <fullName>PreferredContact__c</fullName>
    <label>PreferredContact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>