force-app/main/default/objects/Contact/fields/PreferredContactFromSurvey__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactFromSurvey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PreferredContactFromSurvey</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Contacts (PreferredContactFromSurvey)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>