force-app/main/default/objects/Contact/fields/PreferredContactTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactTime__c</fullName>
    <label>Preferred Contact Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9am-11am</fullName>
            </value>
            <value>
                <fullName>11am-1pm</fullName>
            </value>
            <value>
                <fullName>1pm-3pm</fullName>
            </value>
            <value>
                <fullName>3pm-5pm</fullName>
            </value>
            <value>
                <fullName>5pm-8pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>