force-app/main/default/objects/Contact/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Language</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Preferred Language</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Contacts (Preferred Language)</relationshipLabel>
    <relationshipName>PreferredLanguages</relationshipName>
    <type>Lookup</type>
</CustomField>