force-app/main/default/objects/Contact/fields/PreferredPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredPaymentMethod__c</fullName>
    <label>Preferred Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash on Delivery</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Online Payment - FPX</fullName>
            </value>
            <value>
                <fullName>E-Wallet</fullName>
            </value>
            <value>
                <fullName>Third Party Payment Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>