force-app/main/default/objects/Contact/fields/PreferredPhone__c.field-meta.xml
<CustomField>
    <fullName>PreferredPhone__c</fullName>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>