force-app/main/default/objects/Contact/fields/PreferredTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredTime__c</fullName>
    <label>Preferred Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slot A : 9am-12noon</fullName>
            </value>
            <value>
                <fullName>Slot B : 12noon - 3pm</fullName>
            </value>
            <value>
                <fullName>Slot C : 3pm - 6pm</fullName>
            </value>
            <value>
                <fullName>Slot D : 9am -10pm&quot;</fullName>
            </value>
            <value>
                <fullName>Slot D : 9am -10pm</fullName>
                <isActive>false</isActive>
                <label>Slot D : 9am -10pm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>