force-app/main/default/objects/Contact/fields/Primary_Carer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Carer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Carer</label>
    <type>Checkbox</type>
</CustomField>