force-app/main/default/objects/Contact/fields/PrimaryCarer__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCarer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Carer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Primary Carer)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>