force-app/main/default/objects/Contact/fields/Purchased_Standard_PED_Product__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Standard_PED_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only for TW market users.</description>
    <label>Purchased Standard PED Product?</label>
    <type>Checkbox</type>
</CustomField>