force-app/main/default/objects/Contact/fields/recordType__c.field-meta.xml
<CustomField>
    <fullName>recordType__c</fullName>
    <formula>RecordType.Name</formula>
    <label>recordType</label>
    <type>Text</type>
</CustomField>