force-app/main/default/objects/Contact/fields/ReferralBy__c.field-meta.xml
<CustomField>
    <fullName>ReferralBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[8-Jul-21 KSK] Used in Object Mapping - Data migration from Dynamics</description>
    <label>Referral By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Referral By)</relationshipLabel>
    <relationshipName>Contact_Referral</relationshipName>
    <type>Lookup</type>
</CustomField>