force-app/main/default/objects/Contact/fields/RenalDiseaseType__c.field-meta.xml
<CustomField>
    <fullName>RenalDiseaseType__c</fullName>
    <label>Renal Disease Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CKD</fullName>
                <label>CKD_慢性腎臟病（未洗腎）</label>
            </value>
            <value>
                <fullName>Hemodialysis</fullName>
                <label>HD_血液透析</label>
            </value>
            <value>
                <fullName>Peritoneal Dialysis</fullName>
                <label>PD_腹膜透析</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>