force-app/main/default/objects/Contact/fields/Salesforce_Journey_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Journey_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Journey Opt Out</label>
    <type>Checkbox</type>
</CustomField>