force-app/main/default/objects/Contact/fields/SalesPerson__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[8-Jul-21 KSK] Used in data migration; Dynamics CRM</description>
    <label>Sales Person</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Contacts (Sales Person)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>