force-app/main/default/objects/Contact/fields/Service_Sales_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Sales_Person_Name__c</fullName>
    <description>[24-Aug-21 Khai] Extracts the Service Sales Person Name in order to display on the front end for users; right now the only visible field is the Service Sales Person ID</description>
    <formula>ServiceSalesPerson__r.PartnerName__c</formula>
    <inlineHelpText>Displays the Partner name of the Service Sales Person</inlineHelpText>
    <label>Service Sales Person Name</label>
    <type>Text</type>
</CustomField>