force-app/main/default/objects/Contact/fields/ServiceSalesPerson__c.field-meta.xml
<CustomField>
    <fullName>ServiceSalesPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Sales Person</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>