force-app/main/default/objects/Contact/fields/SMSOptOut__c.field-meta.xml
<CustomField>
    <fullName>SMSOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>