force-app/main/default/objects/Contact/fields/SMSOptOutDate__c.field-meta.xml
<CustomField>
    <fullName>SMSOptOutDate__c</fullName>
    <label>SMS Opt Out Date</label>
    <type>Date</type>
</CustomField>