force-app/main/default/objects/Contact/fields/Source_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Source_Home_Phone__c</fullName>
    <label>Source Home Phone</label>
    <length>72</length>
    <type>Text</type>
</CustomField>