force-app/main/default/objects/Contact/fields/Source_Loyalty_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Loyalty_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source Loyalty Id</label>
    <length>24</length>
    <type>Text</type>
</CustomField>