force-app/main/default/objects/Contact/fields/Source_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Source_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source - Whatsapp</label>
    <type>Checkbox</type>
</CustomField>