force-app/main/default/objects/Contact/fields/Start_Redeem_Points__c.field-meta.xml
<CustomField>
    <fullName>Start_Redeem_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Start Redeem Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>