force-app/main/default/objects/Contact/fields/SuspiciousCount__c.field-meta.xml
<CustomField>
    <fullName>SuspiciousCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Suspicious Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>