force-app/main/default/objects/Contact/fields/Total_Purchase_Amount_Adult_Brand__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Amount_Adult_Brand__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Total Purchase Amount Adult Brand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>