force-app/main/default/objects/Contact/fields/Total_Purchase_Anniversary_Amount_Adult__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Anniversary_Amount_Adult__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Total Purchase Anniversary Amount Adult</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>