force-app/main/default/objects/Contact/fields/TotalPointsRedeemed__c.field-meta.xml
<CustomField>
    <fullName>TotalPointsRedeemed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Points Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>