force-app/main/default/objects/Contact/fields/TradeChannelCustomer__c.field-meta.xml
<CustomField>
    <fullName>TradeChannelCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Channel Customer</label>
    <type>Checkbox</type>
</CustomField>