force-app/main/default/objects/Contact/fields/TW_SYNC_CHECK__c.field-meta.xml
<CustomField>
    <fullName>TW_SYNC_CHECK__c</fullName>
    <formula>if(RecordType.Name = &apos;Adult&apos;,AND( OR(Phone != null,Email != null,LineUIDPediatric__c != null,  LineUIDAdult__c != null),PrimaryContact__c = True,LineOptOut__c = False ,Blacklisted__c = False, MasterOptOut__c = False ,Active__c = True,RecordType.Name = &apos;Adult&apos;,Market__c =  &apos;TW&apos;),true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TW_SYNC_CHECK</label>
    <type>Checkbox</type>
</CustomField>