force-app/main/default/objects/Contact/fields/UserLatestBrandSwitch__c.field-meta.xml
<CustomField>
    <fullName>UserLatestBrandSwitch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Brand Switch as User</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Latest Brand Switch as User</relationshipLabel>
    <relationshipName>UserLatestBrandSwitch</relationshipName>
    <type>Lookup</type>
</CustomField>