force-app/main/default/objects/Contact/fields/ViberOptOut__c.field-meta.xml
<CustomField>
    <fullName>ViberOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viber Opt Out</label>
    <type>Checkbox</type>
</CustomField>