force-app/main/default/objects/Contact/fields/ViberOptOutDate__c.field-meta.xml
<CustomField>
    <fullName>ViberOptOutDate__c</fullName>
    <label>Viber Opt Out Date</label>
    <type>Date</type>
</CustomField>