force-app/main/default/objects/Contact/fields/Waist_Size__c.field-meta.xml
<CustomField>
    <fullName>Waist_Size__c</fullName>
    <label>Waist Size (in inches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>